# wfc_core

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README  Readme.md  index.html
.ci/: cppcheck.sh  suppressions.txt
.cppcheck/: suppressions.txt
config/: CMakeLists.txt  config.cpp  config.hpp  config_config.hpp  config_config_json.hpp  config_module.cpp  config_module.hpp  config_object.cpp  config_object.hpp  config_package.cpp  configuration.hpp  configuration_json.hpp
core/: CMakeLists.txt  build_info.h  core.cpp  core.hpp  core_config.hpp  core_config_json.hpp  core_module.cpp  core_module.hpp  core_object.cpp  core_object.hpp  core_package.cpp  core_po.cpp  core_singleton.hpp
core/detail/: po.cpp  po.hpp
cov-report/: index.html  (+2 more)
logger/: CMakeLists.txt  logger.cpp  logger.hpp  logger_config.hpp  logger_config_json.hpp  logger_module.cpp  logger_module.hpp  logger_module_config.hpp  logger_module_config_json.hpp  logger_object.cpp  logger_object.hpp  logger_old.cpp  logger_old.hpp  logger_package.cpp  logger_package.hpp  logger_writer.cpp  logger_writer.hpp  writer_config.hpp
logger/domain/: logger_config.hpp  logger_domain.cpp  logger_domain.hpp  logger_writer.cpp  logger_writer.hpp  writer_config.hpp
logger/logger/: aux.cpp  aux.hpp  logger.cpp  logger.hpp  writer.cpp  writer.hpp  writer_options.hpp
logger/module/: logger_config_json.hpp  logger_module.cpp  logger_module.hpp  logger_object.cpp  logger_singleton.cpp  logger_singleton.hpp
package/: CMakeLists.txt  config_package.cpp  config_package.hpp  core_package.cpp  core_package.hpp  logger_package.cpp  logger_package.hpp  startup_package.cpp  startup_package.hpp
package/config/: config_module.cpp  config_module.hpp
package/config/config/: config.cpp  config.hpp  config_config.hpp  config_config_json.hpp  config_singleton.cpp  config_singleton.hpp  configuration.hpp  configuration_json.hpp
package/core/: core_module.cpp  core_module.hpp
package/core/core/: core.cpp  core.hpp  core_config.hpp  core_config_json.hpp  core_singleton.cpp  core_singleton.hpp
package/core/core/detail/: status_log.hpp  status_log_options.hpp  status_log_options_json.hpp
package/logger/: logger_module.cpp  logger_module.hpp
package/logger/logger/: aux.cpp  logger.cpp  logger.hpp  logger_config.hpp  logger_config_json.hpp  logger_singleton.cpp  logger_singleton.hpp  writer.cpp  writer.hpp  writer_options.hpp
package/prometheus/: prometheus_module.cpp  prometheus_module.hpp
package/prometheus/prometheus/: prometheus_config.hpp  prometheus_config_json.hpp  prometheus_domain.cpp  prometheus_domain.hpp  prometheus_multiton.cpp  prometheus_multiton.hpp
package/startup/: startup_module.cpp  startup_module.hpp
package/startup/startup/: parse_arguments.cpp  parse_arguments.hpp  program_arguments.hpp  startup.cpp  startup.hpp  startup_config.hpp  startup_config_json.hpp  startup_singleton.cpp  startup_singleton.hpp
package/stat/: stat_module.cpp
package/stat/gateway/: btp_gateway.hpp
package/stat/stat/: stat_config.hpp  stat_config_json.hpp  stat_domain.cpp  stat_domain.hpp  stat_multiton.cpp  stat_multiton.hpp
package/statistics/: statistics_module.cpp  statistics_module.hpp
package/statistics/gateway/: btp_gateway.hpp  btp_gateway_multiton.cpp  btp_gateway_multiton.hpp
package/statistics/gateway/deprecated/: add_deprecated.hpp  add_deprecated_json.hpp  btp_deprecated_gateway.hpp  btp_deprecated_gateway_multiton.cpp
package/statistics/statistics/: statistics_config.hpp  statistics_config_json.hpp  statistics_domain.cpp  statistics_domain.hpp  statistics_multiton.cpp  statistics_multiton.hpp
package/statistics/statistics_aggregator/: aggregator_config.hpp  aggregator_config_json.hpp  aggregator_domain.cpp  aggregator_domain.hpp  aggregator_multiton.cpp  aggregator_multiton.hpp  statistics_config.hpp  statistics_config_json.hpp  statistics_domain.cpp  statistics_domain.hpp  statistics_multiton.cpp  statistics_multiton.hpp
package/statistics/statistics_gateway/: statistics_gateway.hpp  statistics_gateway_compact.hpp  statistics_gateway_compact_multiton.cpp  statistics_gateway_compact_multiton.hpp  statistics_gateway_multiton.cpp  statistics_gateway_multiton.hpp
package/statistics/statistics_gateway/deprecated/: add_deprecated.hpp  add_deprecated_json.hpp  btp_deprecated_gateway.hpp  btp_deprecated_gateway_multiton.hpp
package/statistics/statistics_log/: statlog_config.hpp  statlog_config_json.hpp  statlog_domain.cpp  statlog_domain.hpp  statlog_multiton.cpp  statlog_multiton.hpp
package/statistics/statistics_service/: statistics_service.hpp  statistics_service_compact.hpp  statistics_service_compact_multiton.cpp  statistics_service_compact_multiton.hpp  statistics_service_multiton.cpp  statistics_service_multiton.hpp
package/statistics/system_statistics/: system_statistics_config.hpp  system_statistics_config_json.hpp  system_statistics_domain.cpp  system_statistics_domain.hpp  system_statistics_multiton.cpp  system_statistics_multiton.hpp  system_statistics_options.hpp  system_statistics_options_json.hpp
package/statistics/system_statistics/impl/: get_procstat.cpp  get_procstat.hpp  procstat.hpp
package/workflow/: workflow_module.cpp  workflow_module.hpp
package/workflow/workflow/: workflow_config.hpp  workflow_config_json.hpp  workflow_domain.cpp  workflow_domain.hpp  workflow_multiton.cpp  workflow_multiton.hpp
startup/: CMakeLists.txt  build_info.h  startup.cpp  startup.hpp  startup_config.hpp  startup_config_json.hpp  startup_module.cpp  startup_module.hpp  startup_object.cpp  startup_object.hpp  startup_package.cpp  startup_package.hpp  startup_po.cpp  startup_singleton.cpp  startup_singleton.hpp
startup/detail/: po.cpp  po.hpp
startup/domain/: parse_arguments.cpp  program_arguments.hpp
startup/startup/: startup_config_json.hpp  startup_module.cpp  startup_singleton.cpp
startup/startup/domain/: parse_arguments.cpp
tests/: CMakeLists.txt  comet_core_test.cpp  config_test.cpp  core_test.cpp  logger_module_test.cpp  package_suite.cpp  startup_test.cpp  wfc_core_test.cpp
(+262 files in other folders)
